--- a/results/plot_logs.ipynb
+++ b/results/plot_logs.ipynb
@@ -265,6 +265,7 @@
     "    \"time_elapsed.epoch_calculation\": \"Epoch duration\",\n",
     "    \"start.epoch\": \"Epoch start time\",\n",
     "    \"log\": \"Actor\",\n",
+    "    \"cumsum\": \"Time elapsed (s)\",\n",
     "}\n",
     "rename_columns = {\n",
     "    \"mean_d_loss\": \"Discriminator Loss\",\n",
@@ -324,6 +325,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MAX_EPOCHS_CROP = 5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "px.line(standalone_df, x=\"epoch\", y=[\"Discriminator Loss\", \"Generator Loss\"], title=\"Losses standalone\", labels=labels, width=WIDTH, height=HEIGHT).show()\n",
     "px.line(all_df, x=\"epoch\", y=[\"Discriminator Loss\"], color=\"log\", title=\"Losses discriminators\", labels=labels, width=WIDTH, height=HEIGHT).show()\n",
     "\n",
@@ -338,16 +348,25 @@
     "f.write_image(img_path / \"fid.png\")\n",
     "f.show()\n",
     "\n",
+    "fid_df_cropped = fid_df[fid_df[\"epoch\"] < MAX_EPOCHS_CROP]\n",
+    "f = px.line(fid_df_cropped, x=\"epoch\", y=\"fid\", color=\"log\", title=\"Fréchet Inception Distance\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"fid_cropped.png\")\n",
+    "f.show()\n",
+    "\n",
     "fid_df = fid_df[fid_df[\"log\"].isin(selected_log)]\n",
     "fid_df = fid_df[fid_df[\"epoch\"] % 900 == 0]\n",
     "f = px.line(fid_df, x=\"epoch\", y=\"fid\", color=\"log\", title=\"Fréchet Inception Distance\", labels=labels, width=WIDTH, height=HEIGHT)\n",
     "f.write_image(img_path / \"fid_filtered.png\")\n",
     "f.show()\n",
     "\n",
-    "\n",
     "is_df = all_df[[\"epoch\", \"log\", \"is\"]].dropna()\n",
     "f = px.line(is_df, x=\"epoch\", y=\"is\", color=\"log\", title=\"Inception Score\", labels=labels, width=WIDTH, height=HEIGHT)\n",
     "f.write_image(img_path / \"is.png\")\n",
+    "f.show()\n",
+    "\n",
+    "is_df_cropped = is_df[is_df[\"epoch\"] < MAX_EPOCHS_CROP]\n",
+    "f = px.line(is_df_cropped, x=\"epoch\", y=\"is\", color=\"log\", title=\"Inception Score\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"is_cropped.png\")\n",
     "f.show()\n",
     "\n",
     "is_df = is_df[is_df[\"log\"].isin(selected_log)]\n",
@@ -394,21 +413,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for log in standalone_server_df[\"log\"].unique():\n",
+    "    cum_sum = standalone_server_df[standalone_server_df[\"log\"] == log][\"time_elapsed.epoch_calculation\"].cumsum()\n",
+    "    standalone_server_df.loc[standalone_server_df[\"log\"] == log, \"cumsum\"] = cum_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "f = px.line(standalone_server_df, x=\"epoch\", y=\"time_elapsed.epoch_calculation\", color=\"log\", title=\"Epoch duration\", labels=labels, width=WIDTH, height=HEIGHT)\n",
     "f.write_image(img_path / \"epoch_duration.png\")\n",
     "f.show()\n",
     "\n",
-    "f = px.line(standalone_server_df, x=\"start.epoch\", y=\"epoch\", color=\"log\", title=\"Epoch start time\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "standalone_server_df_cropped = standalone_server_df[standalone_server_df[\"epoch\"] <= MAX_EPOCHS_CROP]\n",
+    "f = px.line(standalone_server_df_cropped, x=\"epoch\", y=\"time_elapsed.epoch_calculation\", color=\"log\", title=\"Epoch duration\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"epoch_duration_cropped.png\")\n",
+    "f.show()\n",
+    "\n",
+    "f = px.line(standalone_server_df, x=\"epoch\", y=\"cumsum\", color=\"log\", title=\"Epoch achieve as the time pass\", labels=labels, width=WIDTH, height=HEIGHT)\n",
     "f.write_image(img_path / \"epoch_start_time.png\")\n",
     "f.show()\n",
     "\n",
-    "standalone_server_df_cropped = standalone_server_df[standalone_server_df[\"epoch\"] <= 5000]\n",
-    "f = px.line(standalone_server_df_cropped, x=\"start.epoch\", y=\"epoch\", color=\"log\", title=\"Epoch start time\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "standalone_server_df_cropped = standalone_server_df[standalone_server_df[\"epoch\"] <= MAX_EPOCHS_CROP]\n",
+    "f = px.line(standalone_server_df_cropped, x=\"epoch\", y=\"cumsum\", color=\"log\", title=\"Epoch achieve as the time pass\", labels=labels, width=WIDTH, height=HEIGHT)\n",
     "f.write_image(img_path / \"epoch_start_time_cropped.png\")\n",
     "f.show()\n",
     "\n",
     "f = px.line(standalone_df_without_outliers, x=\"epoch\", y=\"time_elapsed.epoch_calculation\", color=\"log\", title=\"Epoch duration (without outliers)\", labels=labels, width=WIDTH, height=HEIGHT)\n",
     "f.write_image(img_path / \"epoch_duration_without_outliers.png\")\n",
+    "f.show()\n",
+    "\n",
+    "standalone_df_without_outliers_cropped = standalone_df_without_outliers[standalone_df_without_outliers[\"epoch\"] <= MAX_EPOCHS_CROP]\n",
+    "f = px.line(standalone_df_without_outliers_cropped, x=\"epoch\", y=\"time_elapsed.epoch_calculation\", color=\"log\", title=\"Epoch duration (without outliers)\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"epoch_duration_without_outliers_cropped.png\")\n",
     "f.show()\n",
     "\n",
     "f = px.bar(df_avg_time_per_epoch, x=\"Actor\", y=\"Average time per epoch\", title=\"Average time per epoch\", width=WIDTH, height=HEIGHT, text_auto=True, color=\"Actor\")\n",
@@ -417,6 +457,37 @@
     "f2.data[0].update(opacity=0.5)\n",
     "f.add_trace(f2.data[0])\n",
     "f.write_image(img_path / \"average_time_per_epoch.png\")\n",
+    "f.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_columns = [\n",
+    "    \"generate_data\",\n",
+    "    \"discriminator_train\",\n",
+    "    \"generator_train\",\n",
+    "]\n",
+    "rename_events = {\n",
+    "    \"generate_data\": \"Generate data\",\n",
+    "    \"calc_gradients\": \"Perform optimization step\",\n",
+    "    \"discriminator_train\": \"Perform an optimization step on the discriminator\",\n",
+    "    \"generator_train\": \"Perform an optimization step on the generator\",\n",
+    "}\n",
+    "labels = {\n",
+    "    \"time_elapsed\": \"Average time elapsed (s)\",\n",
+    "    \"event\": \"Event\",\n",
+    "    \"dataset\": \"Dataset\",\n",
+    "}\n",
+    "\n",
+    "mean_time_elapsed = standalone_events_df[[\"event\", \"dataset\", \"time_elapsed\"]].groupby([\"event\", \"dataset\"]).mean().sort_values(by=\"time_elapsed\").reset_index()\n",
+    "mean_time_elapsed = mean_time_elapsed[mean_time_elapsed[\"event\"].isin(selected_columns)].reset_index(drop=True)\n",
+    "mean_time_elapsed[\"event\"] = mean_time_elapsed[\"event\"].replace(rename_events)\n",
+    "f = px.bar(mean_time_elapsed, x=\"event\", y=\"time_elapsed\", color=\"dataset\", title=\"Mean time elapsed per operations (Server)\", labels=labels, width=WIDTH, height=HEIGHT, text_auto=True)\n",
+    "f.write_image(img_path / \"mean_time_elapsed_bar_standalone.png\")\n",
     "f.show()"
    ]
   },
@@ -561,7 +632,7 @@
     "all_events_df_timeline = all_events_df_timeline[all_events_df_timeline[\"dataset\"] == selected_dataset]\n",
     "\n",
     "timeline_start = px.timeline(\n",
-    "    all_events_df_timeline[all_events_df_timeline[\"index\"] < MAX_EPOCHS],\n",
+    "    all_events_df_timeline[(all_events_df_timeline[\"index\"] > 10) & (all_events_df_timeline[\"index\"] <= 10 + MAX_EPOCHS)],\n",
     "    x_start=\"start\",\n",
     "    x_end=\"end\",\n",
     "    color=\"legend\",\n",
@@ -571,10 +642,28 @@
     "    labels=labels,\n",
     "    width=WIDTH*2,\n",
     "    height=HEIGHT,\n",
-    "    title=f\"Timeline of events for {selected_dataset} - first {MAX_EPOCHS} epochs\"\n",
+    "    title=f\"Timeline of events for {selected_dataset} - {MAX_EPOCHS} epochs\"\n",
     ")\n",
     "timeline_start.update_layout(showlegend=False)\n",
-    "timeline_start.write_image(img_path / \"timeline.png\")\n",
+    "timeline_start.write_image(img_path / \"timeline_10.png\")\n",
+    "timeline_start.show()\n",
+    "\n",
+    "\n",
+    "timeline_start = px.timeline(\n",
+    "    all_events_df_timeline[(all_events_df_timeline[\"index\"] > 10) & (all_events_df_timeline[\"index\"] <= 10 + 1)],\n",
+    "    x_start=\"start\",\n",
+    "    x_end=\"end\",\n",
+    "    color=\"legend\",\n",
+    "    y=\"event\",\n",
+    "    opacity=0.5,\n",
+    "    template=\"plotly_white\",\n",
+    "    labels=labels,\n",
+    "    width=WIDTH*2,\n",
+    "    height=HEIGHT,\n",
+    "    title=f\"Timeline of events for {selected_dataset} - one epoch\"\n",
+    ")\n",
+    "timeline_start.update_layout(showlegend=False)\n",
+    "timeline_start.write_image(img_path / \"timeline_1.png\")\n",
     "timeline_start.show()"
    ]
   }
