--- a/src/gen_images.ipynb
+++ b/src/gen_images.ipynb
@@ -23,12 +23,38 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "actor = f\"CIFAR10.40\"\n",
     "weights_path = Path(\"results\") / \"weights\"\n",
-    "destination_path = Path(\"..\") / \"report\" / \"images\""
+    "destination_path = Path(\"..\") / \"report\" / \"images\"\n",
+    "N_real = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = Partitioner(0, 0)\n",
+    "dataset.load_data()\n",
+    "dataloader = torch.utils.data.DataLoader(dataset.train_dataset, batch_size=100, shuffle=True)\n",
+    "for i in range(N_real):\n",
+    "    real_batch = next(iter(dataloader))[0]\n",
+    "    pil = to_pil_image(make_grid(real_batch, nrow=10, value_range=(-1, 1), normalize=True, padding=0))\n",
+    "    pil = pil.resize((SHAPE[1] * 10, SHAPE[2] * 10), resample=None)\n",
+    "    pil.save(destination_path / f\"real_batch_{i}.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +77,7 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
