--- a/src/results/plot_logs.ipynb
+++ b/src/results/plot_logs.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "logs_path = Path(\"logs\")\n",
-    "img_path = Path(\"..\", \"report\", \"images\")"
+    "img_path = Path(\"..\", \"..\", \"report\", \"images\")"
    ]
   },
   {
@@ -656,6 +656,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "all_events_df_timeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "MAX_EPOCHS = 10\n",
     "events = [\n",
     "    \"generate_data\",\n",
@@ -691,7 +700,7 @@
     "    all_events_df_timeline[(all_events_df_timeline[\"index\"] > 10) & (all_events_df_timeline[\"index\"] <= 10 + MAX_EPOCHS)],\n",
     "    x_start=\"start\",\n",
     "    x_end=\"end\",\n",
-    "    color=\"legend\",\n",
+    "    color=\"name\",\n",
     "    y=\"event\",\n",
     "    opacity=0.5,\n",
     "    template=\"plotly_white\",\n",
@@ -700,7 +709,6 @@
     "    height=HEIGHT,\n",
     "    title=f\"Timeline of events for {selected_dataset} - {MAX_EPOCHS} epochs\"\n",
     ")\n",
-    "timeline_start.update_layout(showlegend=False)\n",
     "timeline_start.write_image(img_path / \"timeline_10.png\")\n",
     "timeline_start.show()\n",
     "\n",
@@ -709,7 +717,7 @@
     "    all_events_df_timeline[(all_events_df_timeline[\"index\"] > 10) & (all_events_df_timeline[\"index\"] <= 10 + 1)],\n",
     "    x_start=\"start\",\n",
     "    x_end=\"end\",\n",
-    "    color=\"legend\",\n",
+    "    color=\"name\",\n",
     "    y=\"event\",\n",
     "    opacity=0.5,\n",
     "    template=\"plotly_white\",\n",
@@ -718,7 +726,6 @@
     "    height=HEIGHT,\n",
     "    title=f\"Timeline of events for {selected_dataset} - one epoch\"\n",
     ")\n",
-    "timeline_start.update_layout(showlegend=False)\n",
     "timeline_start.write_image(img_path / \"timeline_1.png\")\n",
     "timeline_start.show()"
    ]
