--- a/src/gen_images.ipynb
+++ b/src/gen_images.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "actor = f\"CIFAR10.40\"\n",
+    "actor = f\"1000\"\n",
     "weights_path = Path(\"results\") / \"weights\"\n",
     "destination_path = Path(\"..\") / \"report\" / \"images\"\n",
     "N_real = 3"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
