--- a/src/results/plot_logs.ipynb
+++ b/src/results/plot_logs.ipynb
@@ -351,6 +351,13 @@
     "f.write_image(img_path / \"fid.png\")\n",
     "f.show()\n",
     "\n",
+    "\n",
+    "fid_df_10_and_standalone = all_df[[\"epoch\", \"log\", \"fid\"]].dropna()\n",
+    "fid_df_10_and_standalone = fid_df_10_and_standalone[fid_df_10_and_standalone[\"log\"].isin([\"Server (CIFAR10, 10)\", \"Standalone (CIFAR10)\"])]\n",
+    "f = px.line(fid_df_10_and_standalone, x=\"epoch\", y=\"fid\", color=\"log\", title=\"Fréchet Inception Distance\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"fid_4_10_standalone.png\")\n",
+    "f.show()\n",
+    "\n",
     "fid_df_cropped = fid_df[fid_df[\"epoch\"] < MAX_EPOCHS_CROP]\n",
     "f = px.line(fid_df_cropped, x=\"epoch\", y=\"fid\", color=\"log\", title=\"Fréchet Inception Distance\", labels=labels, width=WIDTH, height=HEIGHT)\n",
     "f.write_image(img_path / \"fid_cropped.png\")\n",
@@ -365,6 +372,12 @@
     "is_df = all_df[[\"epoch\", \"log\", \"is\"]].dropna()\n",
     "f = px.line(is_df, x=\"epoch\", y=\"is\", color=\"log\", title=\"Inception Score\", labels=labels, width=WIDTH, height=HEIGHT)\n",
     "f.write_image(img_path / \"is.png\")\n",
+    "f.show()\n",
+    "\n",
+    "is_df_10_and_standalone = all_df[[\"epoch\", \"log\", \"is\"]].dropna()\n",
+    "is_df_10_and_standalone = is_df_10_and_standalone[is_df_10_and_standalone[\"log\"].isin([\"Server (CIFAR10, 10)\", \"Standalone (CIFAR10)\"])]\n",
+    "f = px.line(is_df_10_and_standalone, x=\"epoch\", y=\"is\", color=\"log\", title=\"Inception Score\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"is_4_10_standalone.png\")\n",
     "f.show()\n",
     "\n",
     "is_df_cropped = is_df[is_df[\"epoch\"] < MAX_EPOCHS_CROP]\n",
