--- a/src/results/plot_logs.ipynb
+++ b/src/results/plot_logs.ipynb
@@ -267,7 +267,7 @@
     "    \"start.epoch\": \"Epoch start time\",\n",
     "    \"log\": \"Actor\",\n",
     "    \"cumsum\": \"Time elapsed (s)\",\n",
-    "    \"world_size\": \"World size\",\n",
+    "    \"world_size\": \"Number of workers\",\n",
     "    \"dataset\": \"Dataset\",\n",
     "}\n",
     "rename_columns = {\n",
@@ -308,9 +308,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_df_size = all_df[[\"log\", \"epoch\", \"size.sent\", \"size.recv\"]]\n",
-    "all_df_size = all_df_size.dropna()\n",
-    "px.line(all_df_size, x=\"epoch\", y=[\"size.sent\", \"size.recv\"], color=\"log\", title=\"Size sent and received per epoch\", width=WIDTH, height=HEIGHT).show()"
+    "all_df.iloc[all_df[\"world_size\"].isna().values, all_df.columns.get_loc(\"world_size\")] = 0\n",
+    "all_df[\"world_size\"] = all_df[\"world_size\"].astype(int)\n",
+    "\n",
+    "server_df.iloc[server_df[\"world_size\"].isna().values, server_df.columns.get_loc(\"world_size\")] = 0\n",
+    "server_df[\"world_size\"] = server_df[\"world_size\"].astype(int)\n",
+    "\n",
+    "workers_df.iloc[workers_df[\"world_size\"].isna().values, workers_df.columns.get_loc(\"world_size\")] = 0\n",
+    "workers_df[\"world_size\"] = workers_df[\"world_size\"].astype(int)"
    ]
   },
   {
@@ -319,7 +324,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_df_size.groupby(\"log\").mean()[[\"size.sent\", \"size.recv\"]]"
+    "labels = {\n",
+    "    \"epoch\": \"Epoch\",\n",
+    "    \"size.sent\": \"Size sent (MB)\",\n",
+    "    \"size.recv\": \"Size received (MB)\",\n",
+    "    \"log\": \"Actor\",\n",
+    "    \"dataset\": \"Dataset\",\n",
+    "    \"world_size\": \"Number of workers\",\n",
+    "}\n",
+    "\n",
+    "all_df_size = all_df[[\"log\", \"epoch\", \"size.sent\", \"size.recv\", \"dataset\"]]\n",
+    "all_df_size = all_df_size.dropna()\n",
+    "px.line(all_df_size, x=\"epoch\", y=[\"size.sent\", \"size.recv\"], color=\"log\", title=\"Size sent and received per epoch\", width=WIDTH, height=HEIGHT).show()\n",
+    "\n",
+    "server_all_sizes = server_df[[\"epoch\", \"size.sent\", \"size.recv\", \"world_size\"]]\n",
+    "server_all_sizes = server_all_sizes.groupby([\"world_size\"]).mean().reset_index()\n",
+    "server_all_sizes = server_all_sizes.sort_values(by=\"size.sent\")\n",
+    "\n",
+    "f = px.line(server_all_sizes, x=\"world_size\", y=[\"size.sent\", \"size.recv\"], title=\"Size sent and received per epoch (Server)\", color=\"world_size\", width=WIDTH, height=HEIGHT, labels=labels, markers=True,)\n",
+    "f.update_traces(marker=dict(size=10), textposition='top right')\n",
+    "for i, d in enumerate(f.data):\n",
+    "    for j, a in enumerate(d.x):\n",
+    "        f.add_annotation(x=a, y=d.y[j], text=f\"{d['y'][0]:.2f}\", showarrow=False, xshift=-15, yshift=15)\n",
+    "f2 = px.line(server_all_sizes, x=\"world_size\", y=[\"size.sent\", \"size.recv\"], title=\"Size sent and received per epoch (Server)\", width=WIDTH, height=HEIGHT, labels=labels)\n",
+    "f.add_traces(f2.data)\n",
+    "f.write_image(str(img_path / \"size_sent_recv_server.png\"))\n",
+    "f.show()\n",
+    "\n",
+    "workers_all_sizes = workers_df[[\"epoch\", \"size.sent\", \"size.recv\", \"world_size\"]]\n",
+    "workers_all_sizes = workers_all_sizes.groupby([\"world_size\"]).mean().reset_index()\n",
+    "workers_all_sizes = workers_all_sizes.sort_values(by=\"size.sent\")\n",
+    "\n",
+    "f = px.line(workers_all_sizes, x=\"world_size\", y=[\"size.sent\", \"size.recv\"], title=\"Size sent and received per epoch (Workers)\", color=\"world_size\", width=WIDTH, height=HEIGHT, labels=labels, markers=True,)\n",
+    "f.update_traces(marker=dict(size=10), textposition='top right')\n",
+    "for i, d in enumerate(f.data):\n",
+    "    for j, a in enumerate(d.x):\n",
+    "        f.add_annotation(x=a, y=d.y[j], text=f\"{d['y'][0]:.2f}\", showarrow=False, xshift=-15, yshift=15)\n",
+    "f2 = px.line(workers_all_sizes, x=\"world_size\", y=[\"size.sent\", \"size.recv\"], title=\"Size sent and received per epoch (Workers)\", width=WIDTH, height=HEIGHT, labels=labels)\n",
+    "f.add_traces(f2.data)\n",
+    "f.write_image(str(img_path / \"size_sent_recv_workers.png\"))\n",
+    "f.show()"
    ]
   },
   {
@@ -661,15 +705,6 @@
     "f = px.bar(mean_time_elapsed, x=\"event\", y=\"time_elapsed\", color=\"dataset\", title=\"Outliers - mean time elapsed per operations (Worker)\", labels=labels, width=WIDTH, height=HEIGHT, text_auto=True)\n",
     "f.write_image(img_path / \"mean_time_elapsed_bar_workers_outliers.png\")\n",
     "f.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_events_df_timeline"
    ]
   },
   {
