--- a/report/commands/figureWithCaption.tex
+++ b/report/commands/figureWithCaption.tex
@@ -1,7 +1,7 @@
-\newcommand{\figureWithCaption}[3]{
+\newcommand{\figureWithCaption}[4]{
   \begin{figure}[H]
     \centering
-    \includegraphics[width=#3]{images/#1.png}
+    \includegraphics[width=#3,angle=#4]{images/#1.png}
     \caption{#2}
     \label{fig:#1}
   \end{figure}
