--- a/report/constants/constants.tex
+++ b/report/constants/constants.tex
@@ -1,4 +1,4 @@
-\def\documentTitle{Report - Multi-Discriminator GAN\\Distributed Deep Learning Systems}
+\def\documentTitle{Performance Evaluation on Generative Adversarial Networks in a Distributed Setting\\ \large Distributed Deep Learning Systems}
 \def\deliveryDate{29.05.2024}
 \def\imagesDirectory{images/}
 \def\tocTitle{Table of contents}
