--- a/report/layouts/report.tex
+++ b/report/layouts/report.tex
@@ -44,6 +44,7 @@
 \subfile{appendix/script_arguments.tex}
 \subfile{appendix/algorithm.tex}
 \subfile{appendix/operations.tex}
+\subfile{appendix/results.tex}
 \subfile{appendix/gce.tex}
 
 \bibliography{sections/references.bib}
