--- a/report/distributed_gan.tex
+++ b/report/distributed_gan.tex
@@ -9,6 +9,7 @@
 \usepackage{subfiles} % for subfiles
 \usepackage{amsmath} % for maths
 \usepackage{amssymb}
+\usepackage{ragged2e}
 \usepackage{titlesec} % for chapter title formatting
 \usepackage{listings} % for code blocks
 \usepackage{color} % for colors
