--- a/report/layouts/report.tex
+++ b/report/layouts/report.tex
@@ -17,9 +17,64 @@
 \def\code#1{\texttt{#1}}
 
 \begin{document}
-\nocite{*}
+\begin{titlepage}
 
-\maketitle
+\sffamily
+
+{%
+\Large%
+\noindent%
+\justifying%
+Distributed Deep Learning Systems\\
+Prof. Dr. Lydia Y. Chen
+}
+
+% \vspace{1cm}
+\vfill
+
+{%
+\noindent%
+\Huge%
+\textbf{\documentTitle}%
+%\Large \vspace{0.1in} \par
+}
+
+\vspace{0.75cm}
+
+{%
+\raggedright%
+\normalsize%
+\textbf{Authors}\\
+\vspace{0.1cm}%
+\Large%
+Owen Gombas\\
+\vspace{0.1cm}%
+\normalsize%
+University of Bern
+}
+
+\vspace{0.2cm}
+
+{%
+\raggedright%
+\normalsize%
+\Large%
+Aria Darmanger\\
+\vspace{0.1cm}%
+\normalsize%
+University of Bern
+}
+
+\vspace{1cm}
+\vfill
+
+{%
+\Large
+\noindent
+May 29, 2024
+}
+\end{titlepage}
+\nocite{*}
 
 \tableofcontents
 % \printglossary[type=\acronymtype,title=Glossary]
